--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,32 @@
-div {
-	width: 300px;
-	background-image: url('../images/Betty-White.jpg');
+body {
+	background-color: gray;
+	color: white;
+	border: 1px solid black;
+	margin: 40px;
+	padding: 30px;
+
+}
+
+h1 {
+	font-style: italic;
+	text-align: center;
+
+}
+
+nav {
+	text-align: center;
+}
+
+a {
+	color: green;
+
+}
+
+img {
+	border: 1px solid black;
+	padding: 5px;
+}
+
+footer {
+	text-align: center;
 }
