--- a/css/main.css
+++ b/css/main.css
@@ -1,32 +1,79 @@
 body {
-	background-color: gray;
+	background-color: #444444;
 	color: white;
-	border: 1px solid black;
-	margin: 40px;
-	padding: 30px;
+	font-family: Georgia, serif;
+	text-decoration: none;
+	border: 5px solid #6A6D6C;
+	margin: 30px;
+	padding: 40px;
 
 }
 
 h1 {
 	font-style: italic;
+	font-weight: normal;
 	text-align: center;
 
+}
+
+h2 {
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+h3 {
+	text-transform: uppercase;
+	font-size: 16px;
+	padding: 10px 0 10px 0;
+	color: gray;
+	font-family: sans-serif;
 }
 
 nav {
 	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+h4 {
+	font-family: sans-serif;
+	font-weight: normal;
+	color: white;
+	margin: 0;
+}
+
+small {
+	color: gray;
+}
+
+ul {
+	list-style: square;
+	color: white;
+}
+
+ul p {
+	color: gray;
+	margin-top: 0;
 }
 
 a {
-	color: green;
-
+	color: #3FA789;
+	font-weight: bold;
 }
 
 img {
-	border: 1px solid black;
+	border: 1px solid #6A6D6C;
+	margin-left: 20px;
 	padding: 5px;
+
+}
+
+p {
+	line-height: 1.5;
+	font-size: 18px;
 }
 
 footer {
 	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+	padding-top: 20px;
+
 }
